# odot

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_OUTLINE.md  README.md  justfile  pyproject.toml
.agent/rules/: odot-rules.md
.github/: dependabot.yml
.github/workflows/: bump-version.yml  cd.yml  ci.yml  release.yml
assets/: demo.tape
src/odot/: __init__.py  __main__.py  _format.py  cli.py  core.py  database.py  main.py  models.py
tests/: conftest.py  test_cli.py  test_cli_questionary_api.py  test_cli_subprocess.py  test_core.py  test_database.py  test_format.py  test_models.py
