[project]
name = "odot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Kyle O'Malley", email = "j.kyle.omalley@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["rich>=14.3.2", "sqlmodel>=0.0.33", "typer>=0.23.0"]

[project.scripts]
odot = "odot:main"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.1", "ty>=0.0.16"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
