[project]
name = "odot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Kyle O'Malley", email = "j.kyle.omalley@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["rich>=14.3.2", "sqlmodel>=0.0.33", "typer>=0.23.0"]

[project.scripts]
odot = "odot.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "ty>=0.0.16",
    "pre-commit>=3.7.1",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=src/odot --cov-report=term-missing --cov-fail-under=80"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
